fix lentidao